--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <!-- Icon 1 Codes -->
        
           
-          <a href="https://api.whatsapp.com/send?phone=5511974237159&amp;text=Ol%C3%A1%20Will%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es" target="_blank" rel="nofollow">
+          <a href="https://api.whatsapp.com/send?phone=11974237159&text=Ol%C3%A1%20Will!%20Estou%20vindo%20pelo%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." target="_blank" rel="nofollow">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="45" height="45" viewBox="0 0 256 256" xml:space="preserve">
 
                 <defs>
@@ -134,7 +134,7 @@
                     <a href="preco" class="nav-item nav-link">Preços</a>
                     <a href="contato.html" class="nav-item nav-link ">Contato</a>
                 </div>
-<a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will%2C%20gostaria%20de%20agendar%20uma%20sess%C3%A3o!" target="_blank" class="btn btn-primary d-none d-lg-block">Agendar</a>            </div>
+<a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank" class="btn btn-primary d-none d-lg-block">Agendar</a>            </div>
         </nav>
     </div>
     <!-- Navbar End -->
@@ -160,7 +160,7 @@
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Massagem Sueca (Clássica)</h3>
                             <p class="mx-md-5 px-5">Revitalize-se com a Massagem Sueca, a chave para o seu equilíbrio e bem-estar. Deixe o estresse para trás com essa técnica que tem como intuito relaxar seus músculos, melhorar a circulação e proporcionar uma sensação de profundo relaxamento.</p>
-                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will%2C%20gostaria%20de%20agendar%20uma%20sess%C3%A3o!" target="_blank">Agendar</a>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank">Agendar</a>
                         </div>
                     </div>
                 </div>
@@ -171,7 +171,7 @@
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
                             <h3 class="display-3 text-white mb-3" style="line-height: 0.9;">Liberação miofascial <br><span>(Deep Tissue)</span></h3>
                             <p class="mx-md-5 px-5">Desbloqueie seu potencial físico com a Liberação Miofascial. Reduza dores, melhore a função muscular e promova uma recuperação eficaz. </p>
-                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will%2C%20gostaria%20de%20agendar%20uma%20sess%C3%A3o!" target="_blank">Agendar</a>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank">Agendar</a>
                         </div>
                     </div>
                 </div>
@@ -182,7 +182,7 @@
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Massage Relaxante</h3>
                             <p class="mx-md-5 px-5">Revitalize seu corpo e mente com nossa Massagem Relaxante. Desperte uma sensação de tranquilidade, alívio do estresse e renovação completa.</p>
-                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will%2C%20gostaria%20de%20agendar%20uma%20sess%C3%A3o!" target="_blank">Agendar</a>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank">Agendar</a>
                         </div>
                     </div>
                 </div>
@@ -193,7 +193,7 @@
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Drenagem Linfática</h3>
                             <p class="mx-md-5 px-5">Experimente a Drenagem Linfática, uma técnica comprovada para reduzir o inchaço, promover a desintoxicação e melhorar a circulação. Sinta-se revitalizado e com uma sensação de leveza em seu corpo.</p>
-                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will%2C%20gostaria%20de%20agendar%20uma%20sess%C3%A3o!" target="_blank">Agendar</a>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank">Agendar</a>
                         </div>
                     </div>
                 </div>
@@ -204,7 +204,7 @@
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Pedras quentes</h3>
                             <p class="mx-md-5 px-5">Pedras aquecidas cuidadosamente colocadas em pontos estratégicos do corpo e usadas para massagear suavemente os músculos, proporcionando alívio de tensões e melhorando a circulação. Deixe-se envolver pelo calor terapêutico das pedras e sinta uma profunda sensação de calma e bem-estar. </p>
-                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will%2C%20gostaria%20de%20agendar%20uma%20sess%C3%A3o!" target="_blank">Agendar</a>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank">Agendar</a>
                         </div>
                     </div>
                 </div>
@@ -215,7 +215,7 @@
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Integrativas</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Ventosaterapia</h3>
                             <p class="mx-md-5 px-5">Descubra a antiga arte da Ventosaterapia e experimente seus benefícios terapêuticos. As ventosas são aplicadas estrategicamente para promover a circulação sanguínea, aliviar a tensão muscular e melhorar a saúde geral. Libere as toxinas e encontre alívio natural com a Ventosaterapia.</p>
-                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will%2C%20gostaria%20de%20agendar%20uma%20sess%C3%A3o!" target="_blank">Agendar</a>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank">Agendar</a>
                         </div>
                     </div>
                 </div>
@@ -226,7 +226,7 @@
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
                             <h3 class="display-3 text-white mb-3" style="line-height: 0.9;">Liberação miofascial <br><span>(Conceito ROLF)</span></h3>
                             <p class="mx-md-5 px-5">Com base na filosofia de Ida Rolf, esta abordagem terapêutica única busca reorganizar e realinhar o corpo intervindo na fáscia, para promover um equilíbrio postural melhorado, aliviar dores crônicas e aumentar a flexibilidade. Experimente o Rolfing e sinta a harmonia física e bem-estar. </p>
-                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will%2C%20gostaria%20de%20agendar%20uma%20sess%C3%A3o!" target="_blank">Agendar</a>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank">Agendar</a>
                         </div>
                     </div>
                 </div>
