--- a/shell.html
+++ b/shell.html
@@ -74,7 +74,7 @@
         <!-- Icon 1 Codes -->
        
           
-          <a href="https://api.whatsapp.com/send?phone=5511974237159&amp;text=Ol%C3%A1%20Will%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es" target="_blank" rel="nofollow">
+          <a href="https://api.whatsapp.com/send?phone=11974237159&text=Ol%C3%A1%20Will!%20Estou%20vindo%20pelo%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." target="_blank" rel="nofollow">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="45" height="45" viewBox="0 0 256 256" xml:space="preserve">
 
                 <defs>
@@ -133,7 +133,7 @@
                     <a href="preco" class="nav-item nav-link">Preços</a>
                     <a href="contato" class="nav-item nav-link active">Contato</a>
                 </div>
-<a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will%2C%20gostaria%20de%20agendar%20uma%20sess%C3%A3o!" target="_blank" class="btn btn-primary d-none d-lg-block">Agendar</a>            </div>
+<a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank" class="btn btn-primary d-none d-lg-block">Agendar</a>            </div>
         </nav>
     </div>
     <!-- Navbar End -->
