--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
                                 <p class="m-0">Terapeuta manual, integrativo, instrutor de pilates &<br>graduando em fisioterapia</p>
                             </div>
                             <div class="team-social bg-dark text-center">
-                                <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/drwillsouto/" target="_blank"><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-outline-primary btn-square mr-2" href="https://www.instagram.com/drwillsouto/" target="_blank"><i class="fab fa-instagram"></i></a>
                                 <a class="btn btn-outline-primary btn-square mr-2" href="https://twitter.com/drwillsouto" target="_blank"><i class="fab fa-twitter"></i></a>
                                 <!--<a class="btn btn-outline-primary btn-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>-->
                                 <a class="btn btn-outline-primary btn-square mr-2" href="https://www.linkedin.com/in/willsouto/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
